; ModuleID = '/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_pk_wrap.c_eckey_sign_wrap.c'
source_filename = "/home/carl/AnghaBench/RetroArch/deps/mbedtls/extr_pk_wrap.c_eckey_sign_wrap.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32, i8*, i64, i8*, i64*, i32 (i8*, i8*, i64)*, i8*)* @eckey_sign_wrap to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @eckey_sign_wrap(i8* %0, i32 %1, i8* %2, i64 %3, i8* %4, i64* %5, i32 (i8*, i8*, i64)* %6, i8* %7) #0 {
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i64, align 8
  %13 = alloca i8*, align 8
  %14 = alloca i64*, align 8
  %15 = alloca i32 (i8*, i8*, i64)*, align 8
  %16 = alloca i8*, align 8
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  store i8* %0, i8** %9, align 8
  store i32 %1, i32* %10, align 4
  store i8* %2, i8** %11, align 8
  store i64 %3, i64* %12, align 8
  store i8* %4, i8** %13, align 8
  store i64* %5, i64** %14, align 8
  store i32 (i8*, i8*, i64)* %6, i32 (i8*, i8*, i64)** %15, align 8
  store i8* %7, i8** %16, align 8
  %19 = call i32 @mbedtls_ecdsa_init(i32* %18)
  %20 = load i8*, i8** %9, align 8
  %21 = call i32 @mbedtls_ecdsa_from_keypair(i32* %18, i8* %20)
  store i32 %21, i32* %17, align 4
  %22 = icmp eq i32 %21, 0
  br i1 %22, label %23, label %32

23:                                               ; preds = %8
  %24 = load i32, i32* %10, align 4
  %25 = load i8*, i8** %11, align 8
  %26 = load i64, i64* %12, align 8
  %27 = load i8*, i8** %13, align 8
  %28 = load i64*, i64** %14, align 8
  %29 = load i32 (i8*, i8*, i64)*, i32 (i8*, i8*, i64)** %15, align 8
  %30 = load i8*, i8** %16, align 8
  %31 = call i32 @ecdsa_sign_wrap(i32* %18, i32 %24, i8* %25, i64 %26, i8* %27, i64* %28, i32 (i8*, i8*, i64)* %29, i8* %30)
  store i32 %31, i32* %17, align 4
  br label %32

32:                                               ; preds = %23, %8
  %33 = call i32 @mbedtls_ecdsa_free(i32* %18)
  %34 = load i32, i32* %17, align 4
  ret i32 %34
}

declare dso_local i32 @mbedtls_ecdsa_init(i32*) #1

declare dso_local i32 @mbedtls_ecdsa_from_keypair(i32*, i8*) #1

declare dso_local i32 @ecdsa_sign_wrap(i32*, i32, i8*, i64, i8*, i64*, i32 (i8*, i8*, i64)*, i8*) #1

declare dso_local i32 @mbedtls_ecdsa_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
